POP UP PART I, fixing the image when overflowing the border radius

--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,8 @@ body {
     background-color: white;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 3px;
-    display: table; }
+    display: table;
+    overflow: hidden; }
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
