--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -15,6 +15,7 @@
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
         border-radius: 3px;
         display: table;
+        overflow: hidden; // so that part of the image which is overflowing this box will not be visible anymore
     }
 
     &__left {
